--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <td>X</td>
       </tr>
     </table>
-    <button onclick="clearscreen()">clear</button>
+    <button onclick="clearscreen(this)">clear</button>
   </div>
 
 
