--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title> </title>
 </head>
 
@@ -155,7 +156,7 @@
         <td>X</td>
       </tr>
     </table>
-    <button onclick="clearscreen(this)">clear</button>
+    <button onclick="clear screen()">clear</button>
   </div>
 
 
@@ -177,7 +178,7 @@
   </section>
 </body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="js/scripts.js" charset="utf-8"></script>
 
